llvm-toolchain-snapshot (1:12~++20201124100523+245052ac3080-1~exp1) UNRELEASED; urgency=medium

  [ Sylvestre Ledru ]
  * experimental New snapshot release
  * Workaround a static_assert on https://bugs.llvm.org/show_bug.cgi?id=48259
    "static assertion failed: Recycler allocation size is less than object size!"

  [ Gianfranco Costamagna ]
  * Add upstream patch D92052 to fix a gcn offload compiler issue with gcc (Closes: #975692)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 24 Nov 2020 10:08:59 +0100

llvm-toolchain-snapshot (1:12~++20201105093023+cc2a2bb5ce5-1~exp1) experimental; urgency=medium

  * experimental New snapshot release
  * lld-use-link-atomic-i386.diff Try to workaround a linker error
    error: undefined reference to '__atomic_load'
    on sid i386
  * Bring back gold for ppc64el. Doko thinks it is fixed.

  [ John Paul Adrian Glaubitz ]
  * Limit maximum parallel link jobs to 4 on sparc and sparc64

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 05 Nov 2020 09:42:14 +0100

llvm-toolchain-snapshot (1:12~++20200929085817+962a247aebb-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * New snapshot release
  * Install omp.h in instead of /usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION_FULL@/include/
    instead of /usr/lib/llvm-@LLVM_VERSION@/include/openmp/omp
  * Install split-file in llvm-X-tools (like lit)
  * Add new symbols to libclang1:
   - clang_CXRewriter_create
   - clang_CXRewriter_dispose
   - clang_CXRewriter_insertTextBefore
   - clang_CXRewriter_overwriteChangedFiles
   - clang_CXRewriter_removeText
   - clang_CXRewriter_replaceText
   - clang_CXRewriter_writeMainFileToStdOut
   - clang_Cursor_getVarDeclInitializer
   - clang_Cursor_hasVarDeclExternalStorage
   - clang_Cursor_hasVarDeclGlobalStorage

  [ John Paul Adrian Glaubitz ]
  * Link against libatomic on mipsel to fix FTBFS in stage2
  * Link against libatomic on powerpc to fix FTBFS in stage2
  * Use dh-exec to exclude lib/libPolly*.a on powerpc and